[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyledger"
version = "0.0.1"
description = "Python package to streamline implementation of or connection to accounting systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MaCX ReD AG"}]
keywords = ["accounting", "ledger", "bookkeeping", "double-entry", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "numpy",
    "pandas",
    "xlsxwriter",
    "openpyxl",
    "pyyaml",
    "polars",
    "pyarrow",
    "typst",
    "pytest",
    "consistent_df @ https://github.com/macxred/consistent_df/tarball/main"
]

[project.urls]
Homepage = "https://github.com/macxred/pyledger"

[project.optional-dependencies]
dev = ["pytest", "coverage", "flake8", "bandit"]

[tool.setuptools]
packages = ["pyledger", "pyledger.tests"]
